--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>José Almeida</title>
-    <link rel="shortcut icon" href="imgs/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../imgs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/indexs/estilos-index-white.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
