--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>José Almeida</title>
-    <link rel="shortcut icon" href="../../imgs/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/indexs/estilos-index-white.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 </head>
 </body>
 
@@ -25,7 +28,7 @@
     <div class="mi-nombre">
         <h1 class="h1s">José Almeida, mini diseñador web</h1>
     </div>
-
+  </div>
 <center>
 <div id="mis_imagenes">
 <img src="../../imgs/yo1.jpg" id="imagen1" class="animate__animated animate__bounceIn">
@@ -35,8 +38,49 @@
 </center>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer>
+<hr>
+<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/Jose_Almeida13y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
+</h3>
+</footer>
 
-  <br><br>
-</div>
+
+<style type="text/css">
+
+  footer::selection {
+    background-color: blueviolet;
+  }
+
+  footer {
+    font-weight: 100;
+    font-size: 12px;
+    text-align: center;
+  }
+  
+  footer #footer {
+    color: black;
+  }
+
+  #footer,footer a{
+    padding-top: 15px;
+    font-family: 'Raleway';
+  }
+
+  #footer a {
+    text-decoration: none;
+    color: #7979DA;
+  }
+
+  #footer a:hover {
+    text-decoration: underline;
+  }
+</style>
 </body>
 </html>
