--- a/html/playlist/playlist-dark.html
+++ b/html/playlist/playlist-dark.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>José Almeida</title>
-        <link rel="shortcut icon" href="../../imgs/icon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/playlist/estilos-playlist-dark.css">
     <link
     rel="stylesheet"
