--- a/html/playlist/playlist-white.html
+++ b/html/playlist/playlist-white.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>José Almeida</title>
     <link rel="stylesheet" href="../../css/playlist/estilos-playlist-white.css">
+    <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
