--- a/html/playlist/playlist-white.html
+++ b/html/playlist/playlist-white.html
@@ -112,6 +112,16 @@
 <a href="https://open.spotify.com/album/4QLAtpLNUsHEYrcHXmMIZZ?si=sBGpBWBDT7CEMIXtvr8C4w&dl_branch=1&nd=1" id="stay_h1" target="_blank"><h1>Stay</h1></a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- CLOSE STAY -->
+
+<!-- SUNFLOWER -->
+<a href="https://open.spotify.com/track/3KkXRkHbMCARz0aVfEt68P?si=6a085e13fa20460d&nd=1" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e02e2e352d89826aef6dbd5ff8f" width="20%" id="sunflower"></a>
+
+<a href="https://open.spotify.com/track/3KkXRkHbMCARz0aVfEt68P?si=6a085e13fa20460d&nd=1" id="sunflower_h1" target="_blank"><h1>Sunflower - Post Malone</h1></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- CLOSE SUNFLOWER -->
+</div>
+<hr>
+
 </div>
 <hr>
 
