--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>José Almeida</title>
     <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
-    <link rel="stylesheet" href="../../css/indexs/estilos-index-white.css">
+    <link rel="stylesheet" href="../../css/indexs/estilos-index-white.css"
+    <link rel="stylesheet" href="../../css/scrool.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -53,4 +54,3 @@
 </style>
 </body>
 </html>
-
