--- a/html/playlist/playlist-dark.html
+++ b/html/playlist/playlist-dark.html
@@ -7,6 +7,8 @@
     <title>José Almeida</title>
         <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/playlist/estilos-playlist-dark.css">
+        <link rel="stylesheet" href="../../css/scrool.css">
+
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
