--- a/html/playlist/playlist-white.html
+++ b/html/playlist/playlist-white.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>José Almeida</title>
     <link rel="stylesheet" href="../../css/playlist/estilos-playlist-white.css">
+    <link rel="stylesheet" href="../../css/scrool.css">
     <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link
     rel="stylesheet"
