--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 </head>
 </body>
 
-
-
 <div>
   <nav>
     <ul>
@@ -51,6 +49,30 @@
 <h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/Jose_Almeida13y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
 </h3>
 <br>
+
+<div id="anuncio" style="width: 500px; height: 450px;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4057563064937967"
+     crossorigin="anonymous"></script>
+<!-- anuncio -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:500px;height:450px"
+     data-ad-client="ca-pub-4057563064937967"
+     data-ad-slot="4226372938"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-4057563064937967"
+     data-ad-slot="8777374920"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+
+</div>
 </footer>
 </body>
 </html>
