--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>José Almeida</title>
     <link rel="shortcut icon" href="imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="css/indexs/estilos-index.css">
+    <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/scrool.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,13 +17,12 @@
 <div>
   <nav>
     <ul>
-      <li id="home_li"><a href="index.html">José Almeida</a></li>
+      <li id="home_li"><a href="index.html">José Almeida ☚</a></li>
       <li id="playlist_li"><a href="html/playlist/playlist-dark.html">Playlist</a></li>
       <li id="change_li"><a href="html/indexs/index-white.html">Modo claro ☀</a></li>
     </ul>
   </nav>
 </div>
-
 
   <div id="principal">
     <div class="mi-nombre">
@@ -49,30 +49,6 @@
 <h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/Jose_Almeida13y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
 </h3>
 <br>
-
-<div id="anuncio" style="width: 500px; height: 450px;">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4057563064937967"
-     crossorigin="anonymous"></script>
-<!-- anuncio -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:500px;height:450px"
-     data-ad-client="ca-pub-4057563064937967"
-     data-ad-slot="4226372938"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-4057563064937967"
-     data-ad-slot="8777374920"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
-
-</div>
 </footer>
 </body>
 </html>
