--- a/html/playlist/playlist-dark.html
+++ b/html/playlist/playlist-dark.html
@@ -7,14 +7,13 @@
     <title>José Almeida</title>
         <link rel="shortcut icon" href="../../imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="../../css/playlist/estilos-playlist-dark.css">
-        <link rel="stylesheet" href="../../css/scrool.css">
-
+    <link rel="stylesheet" href="../../css/scrool.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
 </head>
-<body>
+<body id="body">
 <style>
 
 
@@ -24,7 +23,7 @@
   <nav>
     <ul>
       <li><a href="../../index.html">José Almeida</a></li>
-      <li><a href="playlist-dark.html">Playlist</a></li>
+      <li><a href="playlist-dark.html"> Playlist ☚</a></li>
       <li id="right"><a href="../playlist/playlist-white.html">Modo claro ☀</a></li>
     </ul>
   </nav>
@@ -68,7 +67,7 @@
 
   <center>
     <a href="https://open.spotify.com/track/5TVirkSwFEXF1nLJEebe2I?si=b64b0ce41f9b403e&nd=1" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e02f9f2d43ff44bdfbe8c556f8d" width="20%" id="beautiful"></a>
-    
+
   </center>
 
   <a href="https://open.spotify.com/track/5TVirkSwFEXF1nLJEebe2I?si=b64b0ce41f9b403e&nd=1" id="beautiful_h1" target="_blank"><h1>Beautiful - Bazzi</h1></a>
@@ -122,12 +121,42 @@
 <a href="https://open.spotify.com/track/3KkXRkHbMCARz0aVfEt68P?si=6a085e13fa20460d&nd=1" id="sunflower_h1" target="_blank"><h1>Sunflower - Post Malone</h1></a>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <!-- CLOSE SUNFLOWER -->
+
+<!-- STAN -->
+<a href="https://open.spotify.com/track/0uOpOhrVFlRDRU8KFEJGMD?si=71bf818078724206&nd=1" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e024200cbc8c08b86b1c052153e" width="20%" id="stan"></a>
+
+<a href="https://open.spotify.com/track/0uOpOhrVFlRDRU8KFEJGMD?si=71bf818078724206&nd=1" id="stan_h1" target="_blank"><h1>Stan</h1></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- CLOSE STAN -->
+
+
+<!-- INCREDIBLE -->
+<a href="https://open.spotify.com/track/42w1CPqOB7XM3iG9BOLYx7?si=d8d0863d7ed54dac" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e02b8f1119e184eca3eb6a060f6" width="20%" id="incredible"></a>
+
+<a href="https://open.spotify.com/track/42w1CPqOB7XM3iG9BOLYx7?si=d8d0863d7ed54dac" target="_blank" id="incredible_h1"><h1>Increible - Gary Barlow</h1></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- CLOSE INCREDIBLE -->
+
+<!-- GOODBYE -->
+<a href="https://open.spotify.com/track/786ymAh5BmHoIpvjyrvjXk?si=1178f0d41bfd4476&nd=1" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e021f675e7b8bae408653346dd9" width="20%" id="goodbye"></a>
+
+<a href="https://open.spotify.com/track/786ymAh5BmHoIpvjyrvjXk?si=1178f0d41bfd4476&nd=10" target="_blank" id="goodbye_h1"><h1>Goodbye To A World</h1></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- CLOSE GOODBYE -->
+
+<!-- LUV -->
+<a href="https://open.spotify.com/album/04ebYhavcGBpHqImHLMyml?si=euqreieZSSaVpnqVsB5fqw&dl_branch=1&nd=1" target="_blank"><img src="https://i.scdn.co/image/ab67616d00001e025d9089762bed2d703725c27b" width="20%" id="luv"></a>
+
+<a href="https://open.spotify.com/album/04ebYhavcGBpHqImHLMyml?si=euqreieZSSaVpnqVsB5fqw&dl_branch=1&nd=1" target="_blank" id="luv_h1"><h1>LUV U NEED U</h1></a>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<!-- CLOSE LUV -->
 </div>
 <hr>
 
+
 <div id="playlist_public_div">
 <br>
-<h5><a href="https://open.spotify.com/playlist/5Hbn280E9g4IW9Hf74Xr3i?si=6670cde0bae84d3e&nd=1" target="_blank" id="playlist_public">Playlist Completa: 
+<h5><a href="https://open.spotify.com/playlist/5Hbn280E9g4IW9Hf74Xr3i?si=6670cde0bae84d3e&nd=1" target="_blank" id="playlist_public">Playlist Completa:
   Entrar a la Playlist</a><h5>
 </div>
 <br>
