--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -18,7 +18,7 @@
 <div>
   <nav>
     <ul>
-      <li><a href="index-white.html">José Almeida</a></li>
+      <li><a href="index-white.html">José Almeida ☚</a></li>
       <li><a href="../playlist/playlist-white.html">Playlist</a></li>
       <li><a href="../../index.html">Modo Oscuro ☽</a></li>
     </ul>
