--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <br>
 <footer>
 <hr>
-<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/Jose_Almeida13y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
+<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/josedalmeidaf">Twitter o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
 </h3>
 <br>
 </footer>
