--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <br>
 <footer>
 <hr>
-<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/josedalmeidaf">Twitter o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
-</h3>
+<h3 id="footer">Escrito, diseñado y construido por <strong>José Almeida,</strong> un diseñador que pudes encontrar en <a href="https://twitter.com/josedalmeidaf">Twitter</a> o <a href="#">Instagram</a></h3>
 <br>
 </footer>
 </body>
