--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="keywords" content="José Almeida, José Daniel Almeida Fernández, Github José Almeida, José Daniel Github, quién es José Daniel, GitHub José Almeida, GitHub, diseñador web, creador web, José Almeida Discord">
     <title>José Almeida</title>
     <link rel="shortcut icon" href="imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="css/indexs/estilos-index.css">
