--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="José Almeida, José Daniel Almeida Fernández, Github José Almeida, José Daniel Github, quién es José Daniel, GitHub José Almeida, GitHub, diseñador web, creador web, José Almeida Discord">
     <title>José Almeida</title>
     <link rel="shortcut icon" href="imgs/a.png" type="image/x-icon">
     <link rel="stylesheet" href="css/indexs/estilos-index.css">
+    <link rel="stylesheet" href="css/icons.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/scrool.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,21 +13,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
-</body>
-
+<body>
 <div>
   <nav>
     <ul>
-      <li id="home_li"><a href="index.html">José Almeida ☚</a></li>
-      <li id="playlist_li"><a href="html/playlist/playlist-dark.html">Playlist</a></li>
-      <li id="change_li"><a href="html/indexs/index-white.html">Modo claro ☀</a></li>
+      <li id="home_li"><a href="index.html"><img src="imgs/perfil.svg" width="15px"> José Almeida ☚</a></li>
+      <li id="playlist_li"><a href="html/playlist/playlist-dark.html"><img src="imgs/spotify-icon.svg" width="15px">  Playlist</a></li>
+      <li id="games_li"><a href="html/games/game-dark.html"><img src="imgs/control.svg" width="15px"> Juegos Favoritos</a></li>
+      <li id="change_li"><a href="html/indexs/index-white.html"><img src="imgs/sol.svg" width="15px"> Modo claro</a></li>
     </ul>
   </nav>
 </div>
 
+
+
   <div id="principal">
     <div class="mi-nombre">
-        <h1 class="h1s">José Almeida, mini diseñador web</h1>
+        <h1 id="h1s" class="animate__animated animate__bounceIn">José Almeida, mini diseñador web</h1>
     </div>
     </div>
 <center>
@@ -47,7 +49,8 @@
 <br>
 <footer>
 <hr>
-<h3 id="footer">Escrito, diseñado y construido por <strong>José Almeida,</strong> un diseñador que pudes encontrar en <a href="https://twitter.com/josedalmeidaf">Twitter</a> o <a href="#">Instagram</a></h3>
+<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/josedf14y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/josedalmeidaf/">Instagram.</a>
+</h3>
 <br>
 </footer>
 </body>
