--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -18,16 +18,17 @@
 <div>
   <nav>
     <ul>
-      <li><a href="index-white.html">José Almeida ☚</a></li>
-      <li><a href="../playlist/playlist-white.html">Playlist</a></li>
-      <li><a href="../../index.html">Modo Oscuro ☽</a></li>
+      <li><a href="index-white.html"><img src="../../imgs/perfil-black.svg" width="15px"> José Almeida ☚</a></li>
+      <li><a href="../playlist/playlist-white.html"><img src="../../imgs/spotify-icon-black.svg" width="15px"> Playlist</a></li>
+      <li><a href="../games/game_white.html"><img src="../../imgs/control-black.svg" width="15px"> Juegos Favoritos</a></li>
+      <li><a href="../../index.html"><img src="../../imgs/luna.svg" width="15px"> Modo Oscuro</a></li>
     </ul>
   </nav>
 </div>
 
   <div id="principal">
     <div class="mi-nombre">
-        <h1 class="h1s">José Almeida, mini diseñador web</h1>
+        <h1 id="h1s" class="animate__animated animate__bounceIn">José Almeida, mini diseñador web</h1>
     </div>
   </div>
 <center>
@@ -46,12 +47,10 @@
 <br>
 <br>
 <footer>
-<hr>
-<h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/Jose_Almeida13y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/jdaf13_/">Instagram.</a>
-</h3>
+  <h3 id="footer">Escrito, diseñado y construido por José Almeida, un diseñador que puedes encontrar en <a href="https://twitter.com/josedf14y">Twitter,</a><a href="https://github.com/JoseDAF"> GitHub</a> o <a href="https://www.instagram.com/josedalmeidaf/">Instagram.</a>
+  </h3>
 <br>
 </footer>
 </style>
-<!-- Sigueme en Twitter: https://twitter.com/Jose_Almeida13y -->
 </body>
 </html>
