--- a/html/playlist/playlist-dark.html
+++ b/html/playlist/playlist-dark.html
@@ -22,9 +22,10 @@
 <div>
   <nav>
     <ul>
-      <li><a href="../../index.html">José Almeida</a></li>
-      <li><a href="playlist-dark.html"> Playlist ☚</a></li>
-      <li id="right"><a href="../playlist/playlist-white.html">Modo claro ☀</a></li>
+      <li><a href="../../index.html"><img src="../../imgs/perfil.svg" width="15px"> José Almeida</a></li>
+      <li><a href="playlist-dark.html"><img src="../../imgs/spotify-icon.svg" width="15px"> Playlist ☚</a></li>
+      <li><a href="../../html/games/game-dark.html"><img src="../../imgs/control.svg" width="15px"> Juegos Favoritos</a></li>
+      <li id="right"><a href="../playlist/playlist-white.html"><img src="../../imgs/sol.svg" width="15px"> Modo claro</a></li>
     </ul>
   </nav>
 </div>
