--- a/html/playlist/playlist-white.html
+++ b/html/playlist/playlist-white.html
@@ -14,17 +14,13 @@
   />
 </head>
 <body>
-<style>
-
-
-</style>
-
 <div>
   <nav>
     <ul>
-      <li><a href="../../html/indexs/index-white.html">José Almeida</a></li>
-      <li><a href="../../html/playlist/playlist-white.html">Playlist ☚</a></li>
-      <li><a href="../../html/playlist/playlist-dark.html">Modo Oscuro ☽</a></li>
+      <li><a href="../../html/indexs/index-white.html"><img src="../../imgs/perfil-black.svg" width="15px"> José Almeida</a></li>
+      <li><a href="../../html/playlist/playlist-white.html"><img src="../../imgs/spotify-icon-black.svg" width="15px"> Playlist ☚</a></li>
+      <li><a href="../../html/games/game_white.html"><img src="../../imgs/control-black.svg" width="15px"> Juegos Favoritos</a></li>
+      <li><a href="../../html/playlist/playlist-dark.html"><img src="../../imgs/luna.svg" width="15px"> Modo Oscuro</a></li>
     </ul>
   </nav>
 </div>
