--- a/html/indexs/index-white.html
+++ b/html/indexs/index-white.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100;300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 </head>
 </body>
@@ -28,7 +29,12 @@
 
   <div id="principal">
     <div class="mi-nombre">
-        <h1 id="h1s" class="animate__animated animate__bounceIn">José Almeida, mini diseñador web</h1>
+        <h1 id="h1s" class="animate__animated animate__bounceIn" style="text-align: center;
+        margin: 20px 0px 20px 0px;
+        font-family: Lexend;
+        font-weight: 300;
+        font-size: 400%;
+        color: rgb(0, 0, 0);">José Almeida, mini diseñador web</h1>
     </div>
   </div>
 <center>
